FullSb1-27-apr-15/src/objects/History__c.object
<CustomObject>
    <description>Change object to Education - making 3 different sections n- education, exam and employment, change the record types to 3 sections with 3 objects, add three record types for education, High School, Undergraduate and Graduate.</description>
    <fields>
        <fullName>Account_Override__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Street Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualSalary__c</fullName>
        <label>Annual Salary In USD $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanySize__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001 and above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antilles, Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabia, Saudi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas, The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateFrom__c</fullName>
        <label>Date Employee From(mm/dd/yy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <label>Date Employee To(mm/dd/yy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DegreeAttained__c</fullName>
        <label>Highest Degree Attained</label>
        <picklist>
            <picklistValues>
                <fullName>Master&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DegreeAttended__c</fullName>
        <label>School attended for Highest Degree</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DegreeDateFrom__c</fullName>
        <label>Date attended from(mm/dd/yy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DegreeDateTo__c</fullName>
        <label>Date attended to (mm/dd/yy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DegreeSpeciality__c</fullName>
        <label>Major and/or Speciality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EducationSpeciality__c</fullName>
        <label>Major and/or Speciality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeementType__c</fullName>
        <label>Type of Employeement</label>
        <picklist>
            <picklistValues>
                <fullName>Part-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Date To (mm/dd/yy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <formula>TEXT(YEAR(End_Date__c))</formula>
        <label>Date To (yyyy)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Proficiency_Listening__c</fullName>
        <label>English Proficiency: Listening</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>English_Proficiency_Reading__c</fullName>
        <label>English Proficiency: Reading</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>English_Proficiency_Speaking__c</fullName>
        <label>English Proficiency: Speaking</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>English_Proficiency_Writing__c</fullName>
        <label>English Proficiency: Writing</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam: Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Location__c</fullName>
        <label>Exam: Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Provider__c</fullName>
        <inlineHelpText>The name of the company that provides the preparation course for the exam.</inlineHelpText>
        <label>Exam Provider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exam_Score__c</fullName>
        <label>Exam: Score</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam: Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cambridge Advanced or Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IELTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearson/PTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEFL or Equivalent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEIC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GraduateAttended__c</fullName>
        <label>Undergraduate School Attended</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GraduateDateFrom__c</fullName>
        <label>Date attended from(mm/dd/yy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GraduateDateTo__c</fullName>
        <label>Date attended to (mm/dd/yy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IndustrySector__c</fullName>
        <label>Industry Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import/Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media &amp;  Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical/Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate/Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Languages_Spoken_Fluently__c</fullName>
        <label>Languages Spoken Fluently</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Months</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name of Current Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Native_Language__c</fullName>
        <label>Native Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NeedofTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I need to Take my Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <label>Type of Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public-Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Test_Date__c</fullName>
        <label>Planned Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Test_Location__c</fullName>
        <label>Planned Test Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position/JobTitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsibilitesOfJob__c</fullName>
        <label>Summerize the responsibilites of job</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Date From (mm/dd/yy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <formula>TEXT(YEAR(Start_Date__c))</formula>
        <label>Date From (yyyy)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TakenTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have already taken my test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Experience_Months__c</fullName>
        <label>Work Experience (Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Experience_Years__c</fullName>
        <label>Work Experience (Years)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years__c</fullName>
        <label>Years</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip/PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History</pluralLabel>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment</fullName>
        <active>true</active>
        <label>Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exam</fullName>
        <active>true</active>
        <label>Exam</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>